--- a/ChatApp/ChatApp/ChatStoryboard.storyboard
+++ b/ChatApp/ChatApp/ChatStoryboard.storyboard
@@ -117,7 +117,7 @@
                                                     </constraints>
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits"/>
+                                                    <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                                 </textField>
                                             </subviews>
                                             <constraints>
@@ -153,7 +153,7 @@
                                                     </constraints>
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits"/>
+                                                    <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                                 </textField>
                                             </subviews>
                                             <constraints>
@@ -174,6 +174,12 @@
                         </connections>
                     </tableView>
                     <tabBarItem key="tabBarItem" title="Account" image="accountIconUnselected" id="1b9-Oi-SkP"/>
+                    <connections>
+                        <outlet property="confirmPasswordTextField" destination="Esl-ju-cpP" id="Q0n-Vs-Ibo"/>
+                        <outlet property="passwordTextField" destination="3ed-gL-Uof" id="2fM-wh-lif"/>
+                        <outlet property="userEmailTextField" destination="8Al-Lt-NiI" id="h64-pV-ZZc"/>
+                        <outlet property="userNameTextField" destination="fDq-JN-PK3" id="ON6-bw-Yxg"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Slg-uY-7zm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
